# patch

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  isort.yml  main.yml
docs/: requirements.txt
docs/source/: candy_guide.rst  conf.py  connections.rst  index.rst  magic.rst  patch.rst  sections.rst  usage.rst
patch/: __init__.py  core.py  error_handler.py  exceptions.py  interpreter.py  objects.py
patch/extensions/: __init__.py
patch/extensions/mod/: VecStim.mod
patch_extensions/: __init__.py
tests/: _shared.py  test_basics.py  test_clamps.py  test_error_handling.py  test_extensions.py  test_iclamp.py  test_interplay.py  test_networks.py  test_parallel.py  test_point_process.py  test_referencing.py
tests/separate/: test_error_handling.py
tests/seperate/: test_error_handling.py
