[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nrn-patch"
authors = [{ name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
python_requires = ">=3.8"
dependencies = [
    "nmodl-glia[neuron]>=4.0.0b2",
    "errr>=1.2.0",
    "numpy>=1.21.0",
    "NEURON>=8.0",
]

[project.urls]
Home = "https://github.com/dbbs-lab/patch"

[project.entry-points."glia.package"]
extensions = "patch.extensions:package"

[project.optional-dependencies]
dev = [
    "sphinx",
    "pre-commit",
    "black>=23.11.0",
    "helveg--sphinx-code-tabs",
    "sphinx_rtd_theme",
]

[tool.flit.module]
name = "patch"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"